Add newsletter modal to multiple pages and update styles

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </section>
 
     <!-- Newsletter Modal -->
-    <div class="modal-overlay" id="newsletterModal">
+    <div class="modal-overlay newsletter-modal" id="newsletterModal">
         <div class="modal">
             <div class="modal-header">
                 <h3 class="modal-title">15% Rabatt auf deine Bestellung</h3>
@@ -272,7 +272,7 @@
                     <button type="button" class="btn btn-ghost" id="declineBtn" style="width: 100%; margin-top: 0.5rem;">Nein, danke.</button>
                 </form>
                 <div class="klaviyo-attribution">
-                    <p>Created with klaviyo</p>
+                    <p>Created with <a href="#" target="_blank">klaviyo</a></p>
                 </div>
             </div>
         </div>
