--- a/cart.html
+++ b/cart.html
@@ -175,6 +175,34 @@
         </div>
     </footer>
 
+    <!-- Newsletter Modal -->
+    <div class="modal-overlay newsletter-modal" id="newsletterModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 class="modal-title">15% Rabatt auf deine Bestellung</h3>
+                <button class="modal-close" id="closeModal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Jetzt zum Newsletter anmelden und wir schenken dir 15% Rabatt auf deine Bestellung.</p>
+                <form class="newsletter-form" id="newsletterForm" data-validate>
+                    <div class="form-group">
+                        <label for="firstName" class="form-label">Vorname</label>
+                        <input type="text" id="firstName" name="firstName" class="form-control" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email" class="form-label">E-Mail Adresse</label>
+                        <input type="email" id="email" name="email" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg" style="width: 100%;">Jetzt 15% sparen</button>
+                    <button type="button" class="btn btn-ghost" id="declineBtn" style="width: 100%; margin-top: 0.5rem;">Nein, danke.</button>
+                </form>
+                <div class="klaviyo-attribution">
+                    <p>Created with <a href="#" target="_blank">klaviyo</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Cookie Banner -->
     <div class="cookie-banner">
         <div class="cookie-left">
