Integrate design system into HTML files, update typography and color scheme, and enhance mobile menu functionality across multiple pages

--- a/products/bracelets.html
+++ b/products/bracelets.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/components.css">
     <link rel="stylesheet" href="../assets/css/pages.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <script type="module" src="../design-system/index.ts"></script>
 </head>
 <body>
     <!-- Top Banner -->
